# VoiceFlow

./: .claude_code_config.json  .coverage  .env.example  .gitignore  306  AGENTS.md  APPLICATION_SPECIFIC_TEST_SCENARIOS.md  BENCHMARK_PERFORMANCE.bat  BLAZING_FAST_VOICEFLOW.md  BUILD_FIX.bat  BUILD_MULTI_METHOD.bat  BUILD_SIMPLE.bat  BUILD_SOLUTIONS.bat  BUILD_STEP_BY_STEP.bat  Bootstrap_Windows.bat  CHANGELOG.md  CLAUDE.md  CLEAN_START.bat  CODE_CLEANUP_SUMMARY.md  COMPREHENSIVE_E2E_TESTING_REPORT.md  COMPREHENSIVE_LOAD_TESTING_REPORT.md  COMPREHENSIVE_TEST.bat  COMPREHENSIVE_TESTING_REPORT.md  COMPREHENSIVE_TEST_PLAN.md  COMPREHENSIVE_UNIT_TEST_ANALYSIS.md  CONSTITUTION.md  CONTRIBUTING.md  CREATE_ELECTRON_APP.bat  CRITICAL_GUARDRAILS_USER_TESTING_GUIDE.md  CreateDesktopShortcut.ps1  DEBUG_SPEECH.bat  DEEPSEEK_PERFORMANCE_ANALYSIS.md  DIAGNOSE.bat  DIAGNOSE_TRAY.bat  END_USER_TEST.bat  ENHANCED_FEATURES_GUIDE.md  FINAL_TESTING_SUMMARY.md  FIX_CRITICAL_ISSUES.bat  HOW_TO_LAUNCH.md  IMPLEMENTATION_COMPLETE.md  (+178 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: basic-test.yml  build-release.yml  ci.yml  runtime-tests.yml  voiceflow-testing.yml
.specify/memory/: constitution.md
api_testing_framework/: mcp_protocol_tests.py  websocket_api_tests.py
archive/development_scripts/: advanced_conversation_agents.py  benchmark_voiceflow.py  browser_integration_cli.py  context_manager.py  debug_ci.py  demo_performance_framework.py  demo_terminal_integration.py  deploy_testing_fleet.py  desktop_application_tester.py  pause_analyzer.py  pause_detection_demo.py  pause_ui.py  vad_cutoff_fix_demo.py  vad_profiles.py  validate_browser_integration.py  voiceflow_debug.py
archive/documentation/: BUILD_STATUS.md  CHANGELOG.md  CODE_CLEANUP_SUMMARY.md  COMPREHENSIVE_TESTING_REPORT.md  CRITICAL_FIXES_SUMMARY.md  HOTKEY_SENSITIVITY_ANALYSIS.md  KNOWN_ISSUES.md  LAUNCH_OPTIONS_ANALYSIS.md  LONG_SESSION_OPTIMIZATIONS.md  MCP_INTEGRATION.md  OPTIMIZATION_COMPLETE_REPORT.md  OPTIMIZATION_GUIDE.md  PAUSE_DETECTION_README.md  README.md  (+10 more)
config/: terminal_config.json
core/: ai_enhancement.py  code_context_analyzer.py  intellij_integration.py  terminal_integration.py  voiceflow_core.py  vscode_terminal_api.py
docs/: AI_COMPANION_TECHNICAL.md  ARCHITECTURE.md  BROWSER_INTEGRATION.md  BUILD_GUIDE.md  CONTRIBUTING.md  HOW_TO_LAUNCH.md  PROJECT_MEMORIES.md  README.md  REPO_STRUCTURE_REVIEW.md  STRATEGIC_ASSESSMENT_2026.md  TECHNICAL_OVERVIEW.md  TESTING_NOTES.md  USER_GUIDE.md  USER_TESTING_PREFERENCES.md  VOICEFLOW_ARCHITECTURE.md  VoiceFlow_Architecture_Guide.txt
e2e_test_reports/: e2e_report_20250711_064740.json
electron/: main.js  package-lock.json  package.json
implementations/: simple.py
localflow/: __init__.py  asr.py  asr_buffer_safe.py  asr_enhanced.py  audio.py  audio_enhanced.py  cli.py  cli_enhanced.py  config.py  enhanced_tray.py  hotkeys.py  hotkeys_enhanced.py  inject.py  settings.py  textproc.py  tray.py  utils.py  visual_indicators.py
native/: critical_test.py  enhanced_voiceflow_native.py  functional_test.py  minimal_test.py  quick_test.py  speech_processor.py  test_components.py  voiceflow_native.py
python/: blazing_fast_silent.py  blazing_fast_working.py  enhanced_stt_server.py  requirements.txt  simple_server.py  simple_tray.py  stt_server.py  stt_server_fixed.py  stt_server_patched.py  voiceflow_performance.py  voiceflow_streamlined.py
scripts/: bench_env.py  build.bat  check-build.bat  check-deps.bat  check_mappings.py  cleanup.bat  list_audio_devices.py  preload_models.py  run.bat  smoke.py  take_screenshots.py  validate_guardrails.py
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
test_results/: EXECUTIVE_SUMMARY_20250713.md  LONG_FORM_TESTING_SUMMARY.md  consolidated_fleet_report_20250713_001546.json  consolidated_fleet_report_20250713_001626.json  consolidated_fleet_report_20250713_001626.txt  long_form_test_report_20250713_001546.json  long_form_test_report_20250713_001626.json
test_results_local/: test_results_20250713_104552.json
test_results_local2/: test_results_20250713_104619.json
test_results_local3/: test_summary_20250713_104746.txt
tests/: E2E_TESTING_GUIDE.md  INTEGRATION_TESTING.md  README.md  conftest.py  run_e2e_tests.py  run_integration_tests.py  run_ux_tests.py  test_accessibility_compliance.py  test_adaptive_memory.py  test_ai_enhancement.py  test_ai_enhancement_load_testing.py  test_asr_engine.py  test_auth.py  test_browser_integration.py  test_buffer_corruption_patterns.py  test_comprehensive_integration.py  test_comprehensive_load_testing.py  test_comprehensive_performance.py  test_config.py  test_core_functionality.py  test_critical_guardrails.py  test_daily_usage_patterns.py  test_e2e_reporting.py  test_e2e_scenarios.py  test_e2e_validation.py  test_end_to_end.py  test_error_recovery_guidance.py  test_feature_discovery_usability.py  test_ide_integration.py  test_injector_logic.py  test_input_validation.py  test_integration.py  test_long_conversation.py  test_memory_profiling.py  test_noise_robustness.py  test_real_audio_comprehensive.py  test_real_world_scenarios.py  test_sanitization_and_rate.py  test_sanity.py  test_secure_db.py  (+14 more)
tools/: VoiceFlow_Control_Center.py  automated_transcription_test.py  capture_control_center_screenshots.py  direct_asr_test.py  simple_audio_test.py  stability_test_runner.py
utils/: __init__.py  config.py  memory_monitor.py  noise_benchmarking.py  noise_simulation.py  secure_db.py  validation.py
voiceflow/: __init__.py  voiceflow_core.py
vscode-extension/: README.md  package.json
wiki/: architecture.md  decisions.md  index.md  known-issues.md  log.md  ui-preferences.md
(+513 files in other folders)
