[package]
name = "voiceflow"
version = "1.0.0"
description = "A free, local voice transcription app powered by Whisper and DeepSeek"
authors = ["VoiceFlow Team"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.7", features = [] }

[dependencies]
tauri = { version = "1.7", features = ["shell-open", "window-all", "global-shortcut-all", "process-all", "notification-all", "clipboard-all", "dialog-all", "path-all", "fs-all", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
